	Fixed bug where links would be inserted incorrectly when auto detecting absolute urls/emails links in inline mode.
	Fixed bug where IE 11 would insert contents in the wrong order due to focus/blur async problems.
	Fixed bug where pasting contents on IE sometimes would place the contents at the end of the editor.
	Fixed so the paste plugin better detects Word 2007 contents not marked with -mso junk.
	Fixed so image button isn't set to an active state when selecting control/media placeholder items.
Version 4.0.11 (2013-11-20)
	Added the possibility to update button icon after it's been rendered.
	Added new autosave_prefix option allows you to set the prefix for the local storage keys.
	Added new pagebreak_split_block option to make it easier to split block elements with a page break.
	Fixed bug where IE would some times produce font elements when typing out side the body root blocks.
	Fixed bug where IE wouldn't properly use the configured root block element but instead use the a paragraph.
	Fixed bug where IE would throw a stack overflow if control selections non images was made in inline mode.
	Fixed bug where IE 8 would render an extra enter element if the contents of the editor was empty.
	Fixed bug where the caret wasn't moved to the first suitable element when updating the source.
	Fixed bug where protocol relative urls would be forced into http protocol.
	Fixed bug where internal images with data urls such as video elements would be removed by the paste_data_images option.
	Fixed bug where the autoresize plugin wouldn't properly resize the editor to initial contents some times.
	Fixed bug where the templates dialog wouldn't be properly rendered on IE 7.
	Fixed bug where updating styles in the advanced tab under the image dialog would remove the style attribute on cancel.
	Fixed bug where tinymce.full.min.js bundle script wasn't detected when looking for the tinymce root path.